--- a/_posts/2019-07-02-the-us-narrative-today.html
+++ b/_posts/2019-07-02-the-us-narrative-today.html
@@ -2560,107 +2560,107 @@ stories:
   domain: http://www.mdjonline.com/
   link: https://www.mdjonline.com/trump-isn-t-taking-no-tanks-for-an-answer-for/image_7bcbe88e-a79f-5871-982a-d18e70f9269e.html
 images:
-- name: subway-subway-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-oily-mcoilface.jpg
-- name: gypsymosaic-gypsy-eyes-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-mucha-mult.jpg
-- name: statue-of-liberty-front-view-statueofliberty-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-dark-soul.jpg
-- name: hollywood-building-hollywood-building-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-jap-dys-1.jpg
-- name: aws-s3-square-C2L6QJRUcAEVlYF-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C2L6QJRUcAEVlYF-square.jpg
-- name: birdhouse-birdhouse-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-alberto-giacometti.jpg
-- name: old-school-house-old-schoolhouse-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-diego-rivera1.jpg
-- name: birdhouse-birdhouse-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-crafty-painting.jpg
-- name: lincoln-memorial-lincolnmemorial-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-pablo-blue.jpg
-- name: trucksilo-trucksilo-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-deep-connections.jpg
-- name: berlinwall-DSC-0084-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-really-hot.jpg
-- name: wind-mills-windmills-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-colorful-dream.jpg
-- name: rockingchair-rockingchair-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-dark-dali.jpg
-- name: old-church-oldchurch-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-atari-asteroids.jpg
-- name: window-window-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-post-modern.jpg
-- name: ellis-island-ellis-island-room-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-sand-paper.jpg
-- name: stories-new-68-113-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-68-113-800-500-0-max-0--1--1.jpg
-- name: crow_satan_red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_satan_red.jpg
-- name: lincoln-memorial-lincolnmemorial-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-propaganda-leaflets.jpg
-- name: yosemite-yosemite-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-blue-circuit.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-monet-one.jpg
-- name: dc-statue-dcstatue-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-clean-view.jpg
-- name: hollywood-building-hollywood-building-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-nazi-poster.jpg
-- name: downtown-trucksilo-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-smooth-ride.jpg
-- name: old-granary-field-oldhouse-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-atari-asteroids.jpg
-- name: abandonedbuildings_sand_paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_sand_paper.jpg
-- name: bluelake-bright-sand-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-bright-sand-file-00-01-17-38.jpg
-- name: castle-wall-DSC-0067-wols.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-wols.JPG
-- name: window-window-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-green-zuma.jpg
-- name: liberty-back-statue-liberty-back-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dark-rain.jpg
-- name: san-francisco-street-view-san-francisco-street-view-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-neo-instinct.jpg
-- name: nazi-invasion-IMG_8352.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_8352.jpg
-- name: crow-crow-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-nazi-poster.jpg
-- name: white-house-lawn-white-house-window-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-diego-rivera1.jpg
-- name: sand-hand-sand-hand-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-green-zuma.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-deep-connections.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-internet-numbers.jpg
-- name: hollywood-building-hollywood-building-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-feed-people.jpg
-- name: lincoln-memorial-lincolnmemorial-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-nazi-poster.jpg
-- name: liberty-back-statue-liberty-back-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-bright-sand.jpg
-- name: power-lines-power-lines-empty-space-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-bright-sand.jpg
-- name: white-house-lawn-white-house-lawn-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-colored-circuits.jpg
-- name: beach-clouds-lifeguard-beachclouds-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-hot-spicy.jpg
-- name: rain-princess-IMG_6945.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_6945.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425.jpg
-- name: oldhousecars-house-old-cars-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-cinnamon-rolls.jpg
-- name: locked-up-steam-lock-up-steam-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-propaganda-leaflets.jpg
-- name: cargo-ship-cargo-ship-on-sea-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-sand-paper.jpg
-- name: power-lines-power-lines-empty-space-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-free-woman.jpg
-- name: trucksilo-trucksilo-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-kand-two.jpg
-- name: stories-new-69-120-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-69-120-800-500-0-max-0-1--1.jpg
+- name: machine-road-machine-road-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-crabapple.jpg
+- name: fence-gorilla.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-gorilla.jpg
+- name: status-berlin-status-berlin-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-circuit-5.jpg
+- name: old-granary-field-granaryfield-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-dark-rain.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-wols.jpg
+- name: flower-barbed-wire-flower-barbed-wire-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-circuit-4.jpg
+- name: oldtrain-oldtrain-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-marcel-duchamp.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-free-woman.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-free-woman.JPG
+- name: los-angeles-from-observatory-losangeles-from-observatory-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-post-modern.jpg
+- name: server-cloud-server-racks-door-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-emily-carr.jpg
+- name: old-cabin-oldcabin-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-ww2-color.jpg
+- name: trucksilo-trucksilo-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-ww2-dresden.jpg
+- name: white-house-lawn-white-house-lawn-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-blue-electricity.jpg
+- name: gypsy-wagon-gypsywagon-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-aqua.jpg
+- name: oldtrain-oldtrain-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-nazi-poster.jpg
+- name: meadowbutterfly-meadow-butterfly-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-dali-three.jpg
+- name: power-lines-power-lines-empty-space-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-purple-pond.jpg
+- name: oldcabin-oldcabin-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-aqua.jpg
+- name: oldroad-old-road-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-clean-view.jpg
+- name: oldsmallboat-oldsmallboat-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-atari-asteroids.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-crunch-paper.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-green-zuma.jpg
+- name: stories-new-20-132-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-20-132-800-500-0-max-0-1--1.jpg
+- name: aws-s3-stories-new-57-64-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-57-64-800-500-0-max-0--5--5.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-kand-two.jpg
+- name: crow_sand_paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_sand_paper.jpg
+- name: castle-wall-DSC-0067-light-dali.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-light-dali.JPG
+- name: aws-s3-stories-sand-hand-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-sand-hand-light-dali.jpg
+- name: gypsy-wagon-gypsywagon-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-creativity.jpg
+- name: supreme-court-supremecourt-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-purp-paper.jpg
+- name: udnie-IMG_8352.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8352.jpg
+- name: cargo-ship-cargo-ship-on-sea-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-gan-vogh.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-dark-rain.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dark-rain.JPG
+- name: abe-lincoln-one-plentiful-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-plentiful-file-00-00-00-00.jpg
+- name: old-house-oldhouse-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-granite.jpg
+- name: amusement-park-amusement-park-2-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-monet-one.jpg
+- name: oldhousecars-house-old-cars-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-colored-circuits.jpg
+- name: aws-s3-stories-death-valley-national-park-dali-three-just-road.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-death-valley-national-park-dali-three-just-road.jpg
+- name: fence-fence-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-matrix.jpg
+- name: aws-s3-stories-cargo-ship-on-sea-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-on-sea-diego-rivera1.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-colorful-blocks.jpg
+- name: docks-docks-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-aqua.jpg
+- name: gypsy-wagon-gypsywagon-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-satan-red.jpg
+- name: yuma-bank-yuma-bak-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-alberto-giacometti.jpg
+- name: oldbarn-oldbarn-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-smooth-ride.jpg
+- name: border-fence-border-fence-on-hill-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-dark-rain.jpg
+- name: trucksilo-trucksilo-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-diego-rivera1.jpg
+- name: meadowbutterfly-meadow-butterfly-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-crabapple.jpg
+- name: castle-wall-DSC-0067-dark-dali.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-dark-dali.JPG
+- name: berlinwall-DSC-0084-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-dark-soul.jpg
+- name: oldhouse-oldhouse-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-yellow-paper.jpg
 ---
 Burglary Suspect Arrested After Evading Authorities.&nbsp;World Bank Unit Implicated In Latin America Graft Scandal.&nbsp;Hot Spots For Fireworks In Grady County.&nbsp;Chinese State Media Take Hard Line On Hong Kong Protests.&nbsp;Border Patrol Head Condemns Agents' Offensive Facebook Posts.&nbsp;Sam Claflin Joins The Enola Holmes Mysteries.&nbsp;Aho Construction Continues To See Uptick In Growth, Revenue.&nbsp;Middle Schools Last Car Show A Special Event.&nbsp;
