--- a/_posts/2019-07-02-the-us-narrative-today.html
+++ b/_posts/2019-07-02-the-us-narrative-today.html
@@ -2560,107 +2560,107 @@ stories:
   domain: http://www.mdjonline.com/
   link: https://www.mdjonline.com/trump-isn-t-taking-no-tanks-for-an-answer-for/image_7bcbe88e-a79f-5871-982a-d18e70f9269e.html
 images:
-- name: machine-road-machine-road-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-crabapple.jpg
-- name: fence-gorilla.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-gorilla.jpg
-- name: status-berlin-status-berlin-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-circuit-5.jpg
-- name: old-granary-field-granaryfield-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-dark-rain.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-wols.jpg
-- name: flower-barbed-wire-flower-barbed-wire-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-circuit-4.jpg
-- name: oldtrain-oldtrain-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-marcel-duchamp.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-free-woman.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-free-woman.JPG
-- name: los-angeles-from-observatory-losangeles-from-observatory-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-post-modern.jpg
-- name: server-cloud-server-racks-door-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-emily-carr.jpg
-- name: old-cabin-oldcabin-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-ww2-color.jpg
-- name: trucksilo-trucksilo-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-ww2-dresden.jpg
-- name: white-house-lawn-white-house-lawn-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-blue-electricity.jpg
-- name: gypsy-wagon-gypsywagon-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-aqua.jpg
-- name: oldtrain-oldtrain-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-nazi-poster.jpg
-- name: meadowbutterfly-meadow-butterfly-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-dali-three.jpg
-- name: power-lines-power-lines-empty-space-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-purple-pond.jpg
-- name: oldcabin-oldcabin-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-aqua.jpg
-- name: oldroad-old-road-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-clean-view.jpg
-- name: oldsmallboat-oldsmallboat-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-atari-asteroids.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-crunch-paper.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-green-zuma.jpg
-- name: stories-new-20-132-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-20-132-800-500-0-max-0-1--1.jpg
-- name: aws-s3-stories-new-57-64-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-57-64-800-500-0-max-0--5--5.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-kand-two.jpg
-- name: crow_sand_paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_sand_paper.jpg
-- name: castle-wall-DSC-0067-light-dali.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-light-dali.JPG
-- name: aws-s3-stories-sand-hand-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-sand-hand-light-dali.jpg
-- name: gypsy-wagon-gypsywagon-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-creativity.jpg
-- name: supreme-court-supremecourt-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-purp-paper.jpg
-- name: udnie-IMG_8352.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8352.jpg
-- name: cargo-ship-cargo-ship-on-sea-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-gan-vogh.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-dark-rain.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dark-rain.JPG
-- name: abe-lincoln-one-plentiful-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-plentiful-file-00-00-00-00.jpg
-- name: old-house-oldhouse-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-granite.jpg
-- name: amusement-park-amusement-park-2-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-monet-one.jpg
-- name: oldhousecars-house-old-cars-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-colored-circuits.jpg
-- name: aws-s3-stories-death-valley-national-park-dali-three-just-road.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-death-valley-national-park-dali-three-just-road.jpg
-- name: fence-fence-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-matrix.jpg
-- name: aws-s3-stories-cargo-ship-on-sea-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-on-sea-diego-rivera1.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-colorful-blocks.jpg
-- name: docks-docks-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-aqua.jpg
+- name: fence-mexico-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-neo-instinct.jpg
+- name: server-cloud-server-racks-clouds-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-free-woman.jpg
+- name: oldhousecars-house-old-cars-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-crabapple.jpg
+- name: trucksilo-trucksilo-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-spagetti-accident.jpg
+- name: store-on-corner-store-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-graham-sutherland.jpg
+- name: oldsmallboat-oldsmallboat-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-ww2-color.jpg
+- name: gears-4882162452-fa3126b38d-b-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-smooth-ride.jpg
+- name: ellis-island-ellis-island-room-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-colorful-blocks.jpg
+- name: death-valley-death-valley-national-park-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-nazi-poster.jpg
+- name: capital-battle-capitolbattle-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-smoking-cigarette.jpg
+- name: oldcabin-store-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-light-dali.jpg
+- name: curtain-curtain-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-atari-asteroids.jpg
+- name: hollywood-building-hollywood-building-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-bright-sand.jpg
 - name: gypsy-wagon-gypsywagon-satan-red.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-satan-red.jpg
-- name: yuma-bank-yuma-bak-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-alberto-giacometti.jpg
-- name: oldbarn-oldbarn-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-smooth-ride.jpg
-- name: border-fence-border-fence-on-hill-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-dark-rain.jpg
-- name: trucksilo-trucksilo-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-diego-rivera1.jpg
-- name: meadowbutterfly-meadow-butterfly-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-crabapple.jpg
-- name: castle-wall-DSC-0067-dark-dali.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-dark-dali.JPG
-- name: berlinwall-DSC-0084-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-dark-soul.jpg
-- name: oldhouse-oldhouse-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-yellow-paper.jpg
+- name: bordercrossing-bordercrossing-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-sunday.jpg
+- name: windowmountain-window-mountain-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-nazi-poster.jpg
+- name: rockingchair-rockingchair-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-purple-storm.jpg
+- name: old-door-lock-old-door-lock-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-gred-mash.jpg
+- name: sand-hand-sand-hand-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-purple-pond.jpg
+- name: old-house-oldhouse-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-cinnamon-rolls.jpg
+- name: curtain-curtain-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-graham-sutherland.jpg
+- name: stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
+- name: old-door-lock-old-door-lock-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-constitution.jpg
+- name: mosaic-face-mosaic-face-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-atari-asteroids.jpg
+- name: flower-barbed-wire-flower-barbed-wire-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-purple-storm.jpg
+- name: docks-docks-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-kand-two.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-spagetti-accident.jpg
+- name: old-cabin-oldcabin-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-really-hot.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-cinnamon-rolls.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-cinnamon-rolls.JPG
+- name: rockingchair-rockingchair-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-green-zuma.jpg
+- name: adam-smith-adam-smith-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-bright-sand.jpg
+- name: beach-clouds-lifeguard-beachclouds-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-dark-rain.jpg
+- name: beach-clouds-lifeguard-beachclouds-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-blue-brush.jpg
+- name: oldsmallboat-oldsmallboat-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-colorful-dream.jpg
+- name: bordercrossing-bordercrossing-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-smooth-ride.jpg
+- name: downtheline-downtheline-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-purp-paper.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-crafty-painting.jpg
+- name: power-lines-power-lines-empty-space-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-crabapple.jpg
+- name: status-berlin-status-berlin-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-oily-mcoilface.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-electricity.jpg
+- name: meadowbutterfly-meadow-butterfly-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-kandinsky-bv.jpg
+- name: downtown-trucksilo-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-colorful-blocks.jpg
+- name: old-granary-field-granaryfield-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-hot-spicy.jpg
+- name: mosaic-face-mosaic-face-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-alberto-giacometti.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-emily-carr.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-emily-carr.JPG
+- name: power-lines-power-lines-empty-space-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-crafty-painting.jpg
+- name: bluelake-crafty-painting-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-crafty-painting-file-00-01-17-38.jpg
+- name: windowmountain-window-mountain-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-blue-granite.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-kand-two.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-kand-two.JPG
+- name: dc-statue-dcstatue-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-marcel-duchamp.jpg
 ---
 Burglary Suspect Arrested After Evading Authorities.&nbsp;World Bank Unit Implicated In Latin America Graft Scandal.&nbsp;Hot Spots For Fireworks In Grady County.&nbsp;Chinese State Media Take Hard Line On Hong Kong Protests.&nbsp;Border Patrol Head Condemns Agents' Offensive Facebook Posts.&nbsp;Sam Claflin Joins The Enola Holmes Mysteries.&nbsp;Aho Construction Continues To See Uptick In Growth, Revenue.&nbsp;Middle Schools Last Car Show A Special Event.&nbsp;
